# fungwas

./: .gitignore  404.html  DESCRIPTION  LICENSE-text.html  LICENSE-text.md  NAMESPACE  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: functions.R  gwas.R  weight-functions.R
articles/: GWAS-in-R.html  GWAS-in-R.md  Q-stat.html  Q-stat.md  fungwas-overview.html  fungwas-overview.md  index.html  index.md  weight-building.html  weight-building.md
docs/: 404.html  authors.html  index.html  phenotype_preparation.md  pkgdown.yml  search.json  sitemap.xml
man/: make_weight_vqtl.Rd  make_weights_generic.Rd  make_weights_normal_mixture.Rd  make_weights_normal_mixture_vqtl.Rd  param_gwas.Rd  qgwas_rif.Rd  quantile_gwas.Rd
reference/: index.html  index.md  make_fd_grad.html  make_fd_grad.md  make_weight_vqtl.html  make_weights_generic.html  make_weights_generic.md  make_weights_normal_mixture.html  make_weights_normal_mixture.md  make_weights_normal_mixture_vqtl.html  make_weights_normal_mixture_vqtl.md  make_weights_vqtl.html  make_weights_vqtl.md  param_gwas.html  param_gwas.md  (+2 more)
stage1/: README.md  environment.yml  pyproject.toml  setup.py
stage1/fungwas_stage1/: __init__.py  cli.py  core.py
stage1/fungwas_stage1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stage1/src/: stage1_core.cpp  stage1_cpp.cpp  stage1_pybind.cpp
stage1/tests/: README.md  test_jk_equivalence.py  test_jk_ols_equivalence.py  test_loco.py  test_multi_phenotype_perf.py
(+76 files in other folders)
