[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "fungwas-stage1"
version = "0.1.0"
description = "Fast RIF quantile GWAS with jackknife covariance estimation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michel Nivard", email = "m.g.nivard@bristol.ac.uk"},
    {name = "Fergus Hamilton", email = "fh6520@bristol.ac.uk"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy",
    "bgen-reader>=4.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
fungwas-stage1 = "fungwas_stage1.cli:main"

[tool.setuptools.packages.find]
where = ["."]
